--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Roman_numbers</title>
+    <title>Beep!Boop!</title>
   </head>
   <body>
   <div class="container">
     <form>
-    <h1>Would you like to play in Roman number game?</h1>
-      <label for="numberInput">Enter your number Here</label>
-      <input type="number" id="numberInput" class="form-control">
+    <br>
+    <h1>Would you like to play the Beep!Boop! Game?</h1> <br>
+      <label for="inputNumber">Enter your number Here:</label>
+      <input type="number" id="inputNumber" class="form-control">
       <button type="submit" name="button">Submit!</button>
     </form>
     <div id="output">
