lunch and doctor break

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     <h1>Would you like to play the Beep!Boop! Game?</h1> <br>
       <label for="inputNumber">Enter your number Here:</label>
       <input type="number" id="inputNumber" class="form-control">
+      <div></div>
       <button type="submit" name="button">Submit!</button>
     </form>
     <div id="output">
-      <p><span id="outputA"></span></p>
+      <p>You entered <span id="outputA"></span></p>
+      <!-- need to add styling to make output numbers look nicer -->
       <p><span id="outputB"></span></p>
     </div>
   </div>
