--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
   <div class="container">
     <form>
     <br>
-    
     <h1>Would you like to play the Beep!Boop! Game?</h1> <br>
-      <label for="inputNumber">Enter your number Here:</label>
+      <label for="inputNumber"> <h3>Enter your number Here:</h3> </label>
       <input type="number" id="inputNumber" class="form-control">
       <button class="btn btn-primary"type="submit" name="button">Submit!</button>
       <div class="btn-group">
