styling for output improved

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="displayOutput" id="output">
       <p>You entered <strong><span id="outputA"></span> </strong></p>
       <!-- need to add styling to make output numbers look nicer -->
-      <p><spa id="outputB"></span></p>
+      <p><span id="outputB"></span></p>
     </div>
   </div>
   </body>
